# damn-vulnerable-MCP-Server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/dvmcp/challenges/: registry.py
src/dvmcp/challenges/advanced/: challenges.py
src/dvmcp/challenges/beginner/: challenges.py
src/dvmcp/challenges/expert/: challenges.py
src/dvmcp/core/: data_store.py  difficulty.py  registry.py  server.py  verification.py
src/dvmcp/dashboard/: app.py
src/dvmcp/data/: novatech.db  seed.py  sent_emails.json  wire_transfers.json
src/dvmcp/data/documents/: engineering_standup_20260310.md  onboarding_guide.md  quarterly_report_q4_2025.md
src/dvmcp/data/emails/: email_001.json  email_002.json  email_003.json
src/dvmcp/data/exports/: payment_methods_export.json
src/dvmcp/data/reports/: headcount_analysis_q1_2026.csv
src/dvmcp/data/secrets/: aws_credentials  gcp_service_account.json  id_rsa  oauth_client_secret.json
src/dvmcp/departments/engineering/: tools.py
src/dvmcp/departments/finance/: tools.py
src/dvmcp/departments/hr/: tools.py
src/dvmcp/departments/it_admin/: tools.py
src/dvmcp/departments/marketing/: tools.py
src/dvmcp/departments/support/: tools.py
src/dvmcp/exfil_listener/: server.py
src/dvmcp/inspector/: app.py
src/dvmcp/inspector/static/: index.html  script.js  style.css
